cred-server/kubernetes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cred-server
  labels:
    app.kubernetes.io/name: cred-server
    app.kubernetes.io/part-of: akeyless
